--- a/client/src/styles/Common.css
+++ b/client/src/styles/Common.css
@@ -164,17 +164,18 @@ input{
   margin:auto 0;
 }
 .thumb-list .desc{
+  width: 100%;
   border-top: solid 1px #c9c9c9;
   border-bottom: solid 1px #c9c9c9;
-  padding: 3.6em 0;
+  padding: 1.6em 0;
 }
 
 /* thumb-list 3 */
 .thumb-list.row-line2 .desc a {
 text-decoration: none;
 color: #333;
-display:-webkit-box;overflow:hidden;height:40px;
--webkit-line-clamp:2;-webkit-box-orient:vertical;
+display:-webkit-box;overflow:hidden;height:105px;
+-webkit-line-clamp:5;-webkit-box-orient:vertical;
 }
 
 .productCount{
