fix: 상품 목록 구조 하드모델 수정 ( pData를 씌우지 않음 ) 외 2건 반영
feat: 수량 버튼을 길게 누르면 증가 또는 감소가 반복되도록 기능 추가
fix: 로그인 박스 너비 반응형 적용

--- a/client/src/styles/Common.css
+++ b/client/src/styles/Common.css
@@ -124,7 +124,7 @@ input{
   cursor: pointer;
 }
 
-/* Main page */
+/* Main page s*/
 
 .MainWrap{
   display: flex;
@@ -204,3 +204,30 @@ display:-webkit-box;overflow:hidden;height:105px;
 }
 
 /* Main page e*/
+
+/* 반응형 */
+
+/* 모바일 스타일 적용 */
+@media (max-width: 600px) {
+  .loginWrap .box{
+    width: 88%;
+  }
+}
+
+/* 태블릿 스타일 적용 */
+@media (min-width: 601px) and (max-width: 1024px) {
+  .loginWrap .box{
+    width: 40%;
+  }
+}
+
+/* 데스크탑 스타일 적용 */
+@media (min-width: 1025px) and (max-width: 1440px) {
+}
+
+/* 대형 데스크탑 스타일 적용 */
+@media (min-width: 1441px) {
+  .loginWrap .box{
+    width: 388px;
+  }
+}
