--- a/client/src/styles/Common.css
+++ b/client/src/styles/Common.css
@@ -58,11 +58,17 @@ ul{
 .j_c_center{justify-content: center;}
 .j_c_between{justify-content: space-between;}
 
+.relative{position: relative;}
+.absolute{position: absolute;}
+
 .mt10{margin-top: 10px;}
 .mt15{margin-top: 15px;}
 .mt20{margin-top: 20px;}
 .mt25{margin-top: 25px;}
 .mt30{margin-top: 30px;}
+.mt40{margin-top: 40px;}
+.mt50{margin-top: 50px;}
+.mt60{margin-top: 60px;}
 
 .mb0{margin-bottom: 0px !important;}
 .mb5{margin-bottom: 5px;}
@@ -74,9 +80,12 @@ ul{
 .mb44{margin-bottom: 44px;}
 .mb60{margin-bottom: 60px;}
 
+.mr0{margin-right: 0px !important;}
 .mr5{margin-right: 5px;}
 .mr10{margin-right: 10px;}
 .mr20{margin-right: 20px;}
+.mr30{margin-right: 30px;}
+.mr40{margin-right: 40px;}
 
 .ml20{margin-left: 20px;}
 
@@ -99,6 +108,13 @@ ul{
 .border-top-bottom {
   border-top: 1px solid #000;
   border-bottom: 1px solid #000;
+}
+
+.searchBtn{
+  width: 80px;  
+  border: 1px solid;
+  cursor: pointer;
+  border: none;
 }
 
 /* Login */
@@ -129,6 +145,10 @@ ul{
   cursor: pointer;
 }
 
+.cursor{
+  cursor: pointer;
+}
+
 /* Main page s*/
 
 .MainWrap{
@@ -149,7 +169,7 @@ ul{
 }
 
 .MainContent{
-  width: 60%;
+  width: 50%;
 }
 
 /* thumb-list 1 */
@@ -160,10 +180,16 @@ ul{
 .thumb-list li{
   display: flex;
 }
-.thumb-photo{width: 140px;height: 138px;border: 2px solid rgba(0,0,0,0.3); 
-  border-radius: 4px;background-position: center;
+.thumb-photo{
+  width: 140px;
+  height: 138px;
+  border: 2px solid rgba(0,0,0,0.3); 
+  border-radius: 4px;
+  background-position: center;
   background-repeat: no-repeat;
-  background-size: 110%;margin-right: 10px;flex-shrink: 0;
+  background-size: 110%;
+  margin-right: 10px;
+  flex-shrink: 0;
   margin-right: 1.5rem;
 }
 
@@ -183,15 +209,18 @@ ul{
   width: 100%;
   border-top: solid 1px #c9c9c9;
   border-bottom: solid 1px #c9c9c9;
-  padding: 1.6em 0;
+  padding: 1.1em 0;
 }
 
 /* thumb-list 3 */
 .thumb-list.row-line2 .desc a {
 text-decoration: none;
 color: #333;
-display:-webkit-box;overflow:hidden;height:105px;
--webkit-line-clamp:5;-webkit-box-orient:vertical;
+display:-webkit-box;
+overflow:hidden;
+height:126px;
+-webkit-line-clamp:6;
+-webkit-box-orient:vertical;
 }
 
 .productCount{
@@ -200,7 +229,7 @@ display:-webkit-box;overflow:hidden;height:105px;
   font-weight: 700;
 }
 
-.countUp, .countDown{
+.countUp, .countDown, .global-button{
   width: 120px; 
   height: 28px;
   border-radius: 15px;
@@ -218,13 +247,141 @@ display:-webkit-box;overflow:hidden;height:105px;
   height: 44px;
   margin: 0 auto;
 }
-
-.MainWrap .searchBtn{
-  width: 80px;
-  border: 1px solid;
-  cursor: pointer;
-}
 /* Main page e*/
+
+/* 배송 화면 s*/
+.delivery-view-wrap{
+  margin: 0 auto;
+}
+
+.delivery-wrap .delivery-view{
+  position: relative;
+  margin-top: 30px;
+}
+
+.delivery-wrap .delivery-view.sec2{
+  margin-top: 240px;
+}
+
+.delivery-wrap .truck-ico{
+  width: 5.2em;
+  height: 5.2em;
+  min-height: 4.2em;    
+  margin: 0;
+  border-radius: 50%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100%;  
+  flex-shrink: 0;   
+  border: 1px solid #b0b0b0;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.delivery-wrap .dl-group{
+  margin-right: 90px;   
+  padding: 10px 0px 10px;
+  background-color: #fff;    
+}
+
+.delivery-wrap .dl-group .delText{
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0);
+  width: 100%;
+  text-align: center;
+}
+
+.delivery-wrap .line{
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  background-color: #ddd;
+  z-index: -1;
+}
+
+.delivery-wrap .connect-line{
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, 0px);
+}
+
+.delivery-wrap .connect-round1{
+  position: absolute;
+  width: 11.4em;
+  height: 11.1em;
+  /* background-color: #eee; */
+  z-index: -1;
+  right: -80px;
+  top: 48%;
+  border-radius: 50%;
+  border: 4px solid #ddd;
+  clip-path: inset(0 0% 0% 50%);
+}
+
+.delivery-wrap .connect-round2{
+  position: absolute;
+  width: 11.4em;
+  height: 11.1em;
+  /* background-color: #eee; */
+  z-index: -1;
+  left: -80px;
+  top: -7.5em;
+  border-radius: 50%;
+  border: 4px solid #ddd;
+  clip-path: inset(0% 50% 0% 0%);
+}
+
+.delivery-wrap .connect-round1_1{
+  position: absolute;
+  width: 11.4em;
+  height: 11.1em;
+  /* background-color: #eee; */
+  z-index: -1;
+  right: -13%;
+  top: 50px;
+  border-radius: 50%;
+  border: 4px solid #ddd;
+  clip-path: inset(0 0% 0% 50%);
+}
+
+.delivery-wrap .connect-round2_2{
+  position: absolute;
+  width: 11.4em;
+  height: 11.1em;
+  /* background-color: #eee; */
+  z-index: -1;
+  left: -13%;
+  top: 223px;
+  border-radius: 50%;
+  border: 4px solid #ddd;
+  clip-path: inset(0% 50% 0% 0%);
+}
+
+/* 배송 화면 e*/
+
+/* 관리자 화면 s */
+.adminWrap{
+  padding-bottom: 120px;
+}
+.partListBtn{
+  right: 10px;
+  bottom: 10px;
+}
+.adminWrap .thumb-list.row-line2 li{
+  align-items: stretch;
+}
+.adminWrap .countBox{
+  border-bottom: 1px solid #000;
+}
+.adminWrap .adminContent{
+  width: 50%;
+  margin: 0 auto;
+}
+.adminWrap .partListContent{
+  width: 50%;
+  margin: 0 auto;
+}
+/* 관리자 화면 e */
 
 /* 반응형 */
 
