fix & feat:  /product/add 이미지 업로드 저장 경로 수정 및 제품 등록 화면 API 연결

--- a/client/src/styles/Common.css
+++ b/client/src/styles/Common.css
@@ -187,14 +187,14 @@ ul{
   border-radius: 4px;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 110%;
+  background-size: cover;
   margin-right: 10px;
   flex-shrink: 0;
   margin-right: 1.5rem;
 }
 
 .thumb-list li:nth-child(2) .thumb-photo{
-  background-size: 110%;
+  background-size: cover;
 }
 
 /* thumb-list 2 */
