--- a/client/src/styles/Common.css
+++ b/client/src/styles/Common.css
@@ -185,8 +185,13 @@ ul{
 
 .w100{width: 100%;}
 .w18{width: 18px;}
+.w133{width: 133px;}
 .w160{width: 160px;}
 .w168{width: 168px;}
+.w620{width: 620px;}
+
+.w50p {width: 50%;}
+
 .h17{height: 17px;}
 .h40{height: 40px;}
 .h42{height: 42px;}
@@ -262,6 +267,10 @@ ul{
 .pb5{padding-bottom: 5px;}
 .pb10{padding-bottom: 10px;}
 
+.pl39{padding-left: 39px;}
+
+.pr39{padding-right: 39px;}
+
 .fw500{font-weight: 500;}
 .fw700{font-weight: 700;}
 
@@ -278,6 +287,8 @@ ul{
 }
 
 .search{
+  flex-grow: 1;
+  width: auto;
   height: 36px;
   margin-right: 15px;
 }
@@ -837,6 +848,11 @@ justify-content: center;
 }
 
 /* 상품 목록 테이블 s */
+.goodsTableWrap{
+  width: 80%;
+  padding-inline: 39px;
+  margin: 0 auto 126px;
+}
 .grid-container{
   display: grid;
   grid-template-columns: 41px repeat(7, auto);
@@ -862,13 +878,17 @@ justify-content: center;
   background-color: #f7f5fc;
 }
 .grid-item.data{
-  height: 31px;
+  height: auto;
+  min-height: 31px;
   background-color: #dbe3f1;
   border-top: 1px solid #e3f3fd;
   border-left: 1px solid #464646;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.grid-item.data.even{
+  background-color: #f7f7f7;
 }
 .grid-item.data.del{
   color:#ff2a2a;
@@ -883,6 +903,18 @@ justify-content: center;
 
 /* 관리자 화면 e */
 
+/* 페이지네이션 스타일 s*/
+.pagiNationBox{
+  grid-column: 1 / -1; /* table 내의 한 행의 너비를 모두 차지하도록 조정 */
+}
+.pagiNaition.customLocation{
+  margin-top: 38px;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, 0px);
+}
+/* 페이지네이션 스타일 e */
 
 /* 반응형 */
 
@@ -900,8 +932,23 @@ justify-content: center;
   }
 }
 
+/* 너비 1031px 이하 */
+@media (max-width: 1031px){
+  .goodsTableWrap{
+    width: 100%;
+    padding-inline: 39px;
+  }
+  .table-search-box{
+    width: 620px;
+  }
+}
+
 /* 데스크탑 스타일 적용 */
 @media (min-width: 1025px) and (max-width: 1440px) {
+  .goodsTableWrap{
+    width: 100%;
+    padding-inline: 30px;
+  }
 }
 
 /* 대형 데스크탑 스타일 적용 */
