--- a/client/src/styles/Common.css
+++ b/client/src/styles/Common.css
@@ -185,6 +185,7 @@ ul{
 
 .w100{width: 100%;}
 .w18{width: 18px;}
+.w120{width: 120px;}
 .w133{width: 133px;}
 .w160{width: 160px;}
 .w168{width: 168px;}
@@ -209,6 +210,7 @@ ul{
 .bgSlate900{ background-color: hsl(202, 55%, 16%);}
 
 .flex{display: flex;}
+.flex1{flex: 1;}
 .f_d_column{flex-direction: column}
 .a_i_center{align-items: center;}
 .j_c_center{justify-content: center;}
@@ -248,6 +250,7 @@ ul{
 .mr0{margin-right: 0px !important;}
 .mr3{margin-right: 3px;}
 .mr5{margin-right: 5px;}
+.mr6{margin-right: 6px;}
 .mr10{margin-right: 10px;}
 .mr11{margin-right: 11px;}
 .mr18{margin-right: 18px;}
@@ -258,6 +261,7 @@ ul{
 .mr38{margin-right: 38px;}
 .mr40{margin-right: 40px;}
 
+.ml6{margin-left: 6px;}
 .ml18{margin-left: 18px;}
 .ml20{margin-left: 20px;}
 
@@ -458,10 +462,31 @@ ul{
 }
 
 .menuBox ul{
-  margin: 0 auto
+  height: 100%;
+  margin: 0 auto;
 }
 
-.menuBox li{
+.menuBox ul > div:last-child {
+  width: 100px;
+  justify-content: center;
+  transition: width 0.3s ease;
+}
+
+.MainWrap .menuBox ul li:hover{
+  background-color: #63b9ff40;  
+}
+
+/* .menuBox ul > div:last-child:hover {
+  width: 120px;
+  justify-content: center;
+} */
+
+
+.MainWrap .menuBox li{
+  width: 84px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   color: #fff;
 }
 
@@ -480,7 +505,15 @@ ul{
 
 .logOut{
   position: absolute;
-  right: 38px;
+  right: 112px;
+  background-color: transparent;
+  border: none;
+  color: #fff;
+}
+
+.myPage{
+  position: absolute;
+  right: 35px;
   background-color: transparent;
   border: none;
   color: #fff;
@@ -555,7 +588,7 @@ header li{
 }
 
 /* thumb-list 3 */
-.thumb-list.row-line2 .desc a {
+.thumb-list.row-line2 .desc a{
 padding-left: 5.3px;
 text-decoration: none;
 color: #333;
@@ -773,6 +806,9 @@ justify-content: center;
   opacity: 1; /* 불투명하게 설정 */
   transform: translateY(0);
   pointer-events: auto; /* 보일 때 클릭 가능 */
+}
+.adminWrap .dd-menu.delivery{
+  width: 120px;
 }
 .adminWrap .dd-menu div{
   display: flex;
