--- a/client/src/styles/Common.css
+++ b/client/src/styles/Common.css
@@ -960,16 +960,18 @@ justify-content: center;
   height: 8rem;
   width: 8rem;
   padding-left: 4px;
-  background: #ec1944;
+  background: linear-gradient(135deg, #6aaeff, #1a8cff);
   border-radius: 50%;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 18px;
   font-weight: bold;
   color: white;
-  line-height: 1.8rem;
-  letter-spacing: 6px;
+  line-height: 1.6rem;
+  letter-spacing: 4px;
   text-align: center;
 }
 /* 부품 목록 e */
