--- a/client/src/styles/Common.css
+++ b/client/src/styles/Common.css
@@ -185,6 +185,7 @@ ul{
 
 .w100{width: 100%;}
 .w18{width: 18px;}
+.w80{width: 80px;}
 .w120{width: 120px;}
 .w133{width: 133px;}
 .w160{width: 160px;}
@@ -785,7 +786,7 @@ justify-content: center;
 }
 
 .delivery-wrap .delivery-view.sec2{
-  margin-top: 240px;
+  margin-top: 220px;
 }
 
 .delivery-wrap .truck-ico{
@@ -798,7 +799,7 @@ justify-content: center;
   background-repeat: no-repeat;
   background-size: 100%;  
   flex-shrink: 0;   
-  border: 1px solid #b0b0b0;
+  border: 2px solid #78909c;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
@@ -819,8 +820,8 @@ justify-content: center;
 .delivery-wrap .line{
   position: absolute;
   width: 100%;
-  height: 4px;
-  background-color: #ddd;
+  height: 3.8px;
+  background-color: #78909c;
   z-index: -1;
 }
 
@@ -882,6 +883,28 @@ justify-content: center;
   clip-path: inset(0% 50% 0% 0%);
 }
 
+.lastDlGroup{
+  margin-left: 6em;
+}
+
+.deliveryArrow{
+  width: 60px;
+  height: auto;
+  top: 50%;    
+  right: -6em;
+  transform: translate(0%, -50%);
+}
+
+.deliveryArrow.last{
+  left: -6em;
+  z-index: 100;
+}
+
+.dlArrive .delText{
+  font-size: 18px;
+  color: #219FD5;
+  font-weight: bold;
+}
 /* 배송 화면 e*/
 
 /* 관리자 화면 s */
@@ -1079,7 +1102,7 @@ justify-content: center;
 
 .partListContent .partOrderBtn{
   margin-top: 11px;
-  background: #63B8FF;
+  background: #30597a;
   color: white;
   padding: 3px 20px;
   border-radius: 4px;
