--- a/client/src/styles/Common.css
+++ b/client/src/styles/Common.css
@@ -190,6 +190,7 @@ ul{
 .w133{width: 133px;}
 .w160{width: 160px;}
 .w168{width: 168px;}
+.w277{width: 277px;}
 .w620{width: 620px;}
 
 .w50p {width: 50%;}
@@ -233,7 +234,9 @@ ul{
 .mt60{margin-top: 60px;}
 .mt66{margin-top: 66px;}
 .mt67{margin-top: 67px;}
+.mt68{margin-top: 68px;}
 .mt116{margin-top: 116px;}
+.mt125{margin-top: 125px;}
 
 .mb0{margin-bottom: 0px !important;}
 .mb5{margin-bottom: 5px;}
@@ -262,7 +265,9 @@ ul{
 .mr38{margin-right: 38px;}
 .mr40{margin-right: 40px;}
 
+.ml5{margin-left: 5px;}
 .ml6{margin-left: 6px;}
+.ml24{margin-left: 24px;}
 .ml18{margin-left: 18px;}
 .ml20{margin-left: 20px;}
 
@@ -507,14 +512,6 @@ ul{
 .logOut{
   position: absolute;
   right: 112px;
-  background-color: transparent;
-  border: none;
-  color: #fff;
-}
-
-.myPage{
-  position: absolute;
-  right: 35px;
   background-color: transparent;
   border: none;
   color: #fff;
@@ -773,11 +770,72 @@ justify-content: center;
   font-size: 20px;
   color: #fff;
 }
+
+/* 마이페이지 s*/
+.myPage{
+  position: absolute;
+  right: 35px;
+  background-color: transparent;
+  border: none;
+  color: #fff;
+}
+
+.myPageTit{
+  margin-top: calc(68px + 67px);
+  font-size: 48px;
+  font-weight: bold;
+}
+
+.myPageWrap .inputList li{
+  list-style: none;
+}
+
+.myPageWrap li:nth-of-type(1) input, .myPageWrap li:nth-of-type(2) input{
+  color: #837f7f;
+  border: 1px solid #837f7f;
+}
+
+.myPageWrap .inputLabel{
+  position: absolute; 
+  min-width: 60px; 
+  left: -84px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  font-weight: 700;
+}
+
+.myPageWrap .addrBox{
+  position: absolute;
+  left: 288px;
+  width: 100%;
+  max-width: 156px;
+  padding-block: 7px;
+  padding-inline: 14px;
+  background-color: #e3f3fd;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.myPageWrap .curAddr{
+  position: absolute;
+  left: 288px;
+  width: 100%;
+  max-width: fit-content;
+  text-wrap: nowrap;
+  padding-block: 5px;
+  padding-inline: 14px;
+  background-color: #dbe3f1;
+  border: 1px solid #8a94ee;
+  border-radius: 8px;
+  cursor: pointer
+}
+/* 마이페이지 e */
 /* Main page e*/
 
 /* 배송 화면 s*/
 .delivery-view-wrap{
-  margin: 0 auto;
+  margin: 100px auto 0;
 }
 
 .delivery-wrap .delivery-view{
@@ -981,6 +1039,8 @@ justify-content: center;
 .formWrap input, .formLeft .selectBox{
   width: 100%;
   min-width: 277px;
+}
+.adminWrap .formWrap input, .formLeft .selectBox{
   margin-bottom: 24px;
 }
 .formWrap .inputTit{
