--- a/client/src/styles/Common.css
+++ b/client/src/styles/Common.css
@@ -1155,12 +1155,16 @@ justify-content: center;
 }
 /* 상품 상세 e */
 
-/* 부품 목록(제품별 부품목록, 부품재고) s*/
+/* 부품 목록(제품별 부품목록, 전체 부품 목록) s*/
 .partListContent{
   margin-bottom: 114px;
 }
 
 .partListContent .partOrderBtn{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin-top: 11px;
   background: #30597a;
   color: white;
@@ -1175,6 +1179,17 @@ justify-content: center;
   background-color: #112a3e;
   transform: translateY(-2px); /* 호버 시 살짝 위로 이동 */
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.partListContent .partOrderBtn.disabled{
+  background-color: #c9c9c9;  
+}
+
+.partListContent .partOrderBtn.disabled:hover{
+  background-color: 0;
+  transform: translateY(0px); /* 호버 시 살짝 위로 이동 */
+  box-shadow: none;
+  cursor: auto;
 }
 
 .addPartBtn{
