--- a/client/src/styles/Common.css
+++ b/client/src/styles/Common.css
@@ -1155,6 +1155,52 @@ justify-content: center;
 }
 /* 상품 상세 e */
 
+/* 부품 목록 팝업 s*/
+.partPopup{
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 50%;
+  height: calc(100% - 340px);
+  overflow: auto;
+  padding-left: 40px;  
+}
+
+.partPopup.custom-alert .alert-tit{
+  margin: 65px 0 0;
+  font-size: 22px;
+  font-weight: bold;
+}
+
+.partPopup .thumb-list.row-line2{
+  width: 100%;
+  padding-right: 20px;
+  overflow: auto;
+}
+
+.partPopup .inputList li{
+  list-style: none;
+}
+
+.partPopup .inputList li input{
+  margin-bottom: 0;
+}
+
+.partPopup li:nth-of-type(1) input, .partPopup li:nth-of-type(2) input{
+  color: #837f7f;
+  border: 1px solid #837f7f;
+}
+
+.partPopup .inputLabel{
+  position: absolute; 
+  min-width: 60px; 
+  left: -84px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  font-weight: 700;
+}
+/* 부품 목록 팝업 e*/
+
 /* 부품 목록(제품별 부품목록, 전체 부품 목록) s*/
 .partListContent{
   margin-bottom: 114px;
