fix: 제품등록 API URL 변경사항 적용 /product/addgoods
- 메인화면의 API URL 자동변경 누락사항 반영
- 부품추가 팝업 스타일 수정

--- a/client/src/styles/Common.css
+++ b/client/src/styles/Common.css
@@ -1177,8 +1177,8 @@ justify-content: center;
 .partPopup{
   top: 50%;
   transform: translate(-50%, -50%);
-  width: 50%;
-  height: calc(100% - 340px);
+  width: 600px;
+  height: auto;
   overflow: auto;
   /* padding-left: 40px;   */
 }
